# io-vizmaps

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml
scripts/: setup.ps1  setup_qgis.bat
src/: setup.py
src/io_vizmaps/: baseDisplay.py  io_config.py  pyqt_play.py  threadPlay.py  vizmap.py
