[tool.poetry]
name = "io_vizmaps"
version = "0.1.0"
description = "A package to allow visualization of raster and vector maps requiring the QGIS software"
authors = ["Loyd Hook"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
